# module-6-DewaSRY

./: README.md  main.py  pyproject.toml
.github/workflows/: main.yml
app/data/: data.db
app/zoo_api/: __init__.py
app/zoo_api/entity/: AnimalSpecies.py  EmployeeRole.py  EmployeeSchedule.py  Gender.py  __init__.py
app/zoo_api/model/: AnimalModel.py  EmployeeModel.py  __init__.py
app/zoo_api/schemas/: AnimalSchemas.py  EmployeeSchemas.py
app/zoo_api/service/: DbModelService.py  EnumMemberService.py
app/zoo_api/service/dbModelService/: AnimalModelService.py  EmployeeModelService.py
app/zoo_api/utils/: FlaskDb.py  ModelType.py  SqlPhat.py
app/zoo_api/views/animal/: AnimalView.py  AnimalsView.py
app/zoo_api/views/employee/: EmployeeView.py  EmployeesView.py
test/: __init__.py  conftest.py  main.py
test/views/animal/: test_AnimalViews.py  test_AnimalsViews.py
test/views/employee/: test_EmployeeViews.py  test_EmployeesViews.py
