[tool.poetry]
name = "zoo-api"
version = "0.0.1"
description = ""
authors = ["DewaSRY <sdewa6645@gmail.com>"]
readme = "README.md"
packages = [{include = "zoo_api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.2"
flask-smorest = "^0.43.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.27"
flask-sqlalchemy = "^3.1.1"
marshmallow = "^3.20.2"
flask-migrate = "^4.0.5"
flask-unittest = "^0.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


